--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: php
 
 php:
   - 5.3
-  - 5.4
   - 5.6
 
-script: phpunit --bootstrap tests/bootstrap.php tests
+script: phpunit --coverage-text -c ./tests/phpunit.xml
